Bug 1139252 - Fix D3D texture memory reporters. r=jrmuizel.

This patch makes the names and reporter paths more consistent. It also removes
sD3D9MemoryUsed, which was unused.

--HG--
extra : rebase_source : f209636a938630e464d529078cfa116eb06339ba